2005-12-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Added rule constructor functions.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Cleanup by moving the different rule generators to their own
	    functions.

	* lib/Makefile.in :

	  - Added forgotten action for mapper rule.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_3_1

	* Merged vlad-1_2_3

	* lib/polbase.h :

	  - Fixed rule dumping format so that no rule has more than one fact
	    in its head.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :

	  - Update rules with variables that are not declared in the var
	    list will be automatically grounded to any matching entities
	    of the same type.

	* lib/fact.cpp :

	  - Fixed incorrect checking of verify_memb() and verify_subst() which
	    used to allow non-ground facts like memb(SS, S) or subst(A, AG).

2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Fixed get() problem so that it won't barf when given null ptrs.

	  - Fixed get() function so that it will give out null pointers
	    instead of an empty list, similar to the behaviour of the other
	    get() function.

	  - Added a variant of the get() function that gives out 2 variable
	    lists.

	* lib/list.cpp :

	  - In the del() function, if deleting a list of items, ignore those
	    that are not in the list.

2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_3_0

	* lib/polbase.cpp :

	  - add_consttab() now accepts non-ground expressions.

	* lib/consttab.cpp :
	* lib/consttab.h :

	  - Removed replace() and varlist() from consttab. Expressions stored
	    in this table should already be grounded.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
